[tool.poetry]
name = "interdict"
version = "2020.11.0a3"
description = "Dictionary filter"
authors = ["Shane R. Spencer <305301+whardier@users.noreply.github.com>"]
homepage = "https://github.com/whardier/interdict"
repository = "https://github.com/whardier/interdict"
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/whardier"

[tool.poetry.dependencies]
python = "^3.8"
flatten-dict = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = {version = "*", allow-prereleases = true}
dead = "*"
flake8 = "*"
fuchar = "*"
hypothesis = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
rope = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
